--- a/core/res/res/values/aosp_bools.xml
+++ b/core/res/res/values/aosp_bools.xml
@@ -19,4 +19,6 @@
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <bool name="config_cleanupUnusedFingerprints">true</bool>
 
+    <!-- Screen off delay -->
+    <integer name="config_screen_off_delay">1000</integer>
 </resources>
