--- a/core/res/res/values/aosp_symbols.xml
+++ b/core/res/res/values/aosp_symbols.xml
@@ -19,4 +19,6 @@
    <!-- Whether to cleanup fingerprints upon connection to the daemon and when user switches -->
     <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
 
+    <!-- Screen off delay -->
+    <java-symbol type="integer" name="config_screen_off_delay" />
 </resources>
